# tests/api_tests/CMakeLists.txt
#
# Copyright (C) 2017-2024 Tactical Computing Laboratories, LLC
# All Rights Reserved
# contact@tactcomplabs.com
#
# See LICENSE in the top level directory for licensing details

# add tests
add_subdirectory(port)
add_subdirectory(readport)
add_subdirectory(writeport)
