# tests/integration_tests/CMakeLists.txt
#
# Copyright (C) 2017-2024 Tactical Computing Laboratories, LLC
# All Rights Reserved
# contact@tactcomplabs.com
#
# See LICENSE in the top level directory for licensing details

add_subdirectory(accum)
add_subdirectory(counter)
add_subdirectory(scratchpad)
add_subdirectory(uart)
